# image-generation

./: README.md  image_generation.py  pyproject.toml
.github/workflows/: build.yml
src/: image_generation.py
src/templates/: images.html  index.html
terraform/: api_gateway.tf  main.tf  providers.tf
