[tool.poetry]
name = "image-generation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
pydantic = "^2.6.4"
jinja2 = "^3.1.3"
python-multipart = "^0.0.9"
mangum = "^0.17.0"

[tool.poetry.group.dev.dependencies]
boto3 = "^1.34.77"
pytest = "^8.1.1"
uvicorn = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
